# LibSWD

./: .drone.yml  .gitignore  .travis.yml  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  autogen.sh  configure  configure.ac
32F0308DISCOVERY/: README.md  STM32F0308-Discovery_Demo_V1.0.0.hex  STM32F0308-Discovery_Demo_V1.0.0.txt
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
doc/html/: files.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  libswd_8c.html  libswd_8h.html  libswd_8h_source.html  structswd__ahbap__t-members.html  structswd__ahbap__t.html  structswd__cmd__t.html  structswd__context__config__t-members.html  structswd__ctx__t-members.html  structswd__ctx__t.html  structswd__driver__t-members.html  structswd__driver__t.html  structswd__swdp__t-members.html  structswd__swdp__t.html
doc/html/search/: all_61.html  all_73.html  defines_61.html  defines_73.html  enums_73.html  enumvalues_73.html  functions_73.html  search.js  typedefs_73.html  variables_62.html  variables_63.html  variables_64.html  variables_6c.html  variables_6d.html  variables_6e.html  variables_73.html
doc/man/man3/: libswd.c.3  swd_cmd_t.3  swd_context_config_t.3  swd_ctx_t.3  swd_swdp_t.3
doxygen-doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x73.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  libswd_8c.html  libswd_8h.html  libswd_8h_source.html  libswd__bin_8c.html  libswd__bitgen_8c.html  libswd__bus_8c.html  libswd__cmd_8c.html  libswd__cmdq_8c.html  libswd__core_8c.html  libswd__dap_8c.html  libswd__drv_8c.html  libswd__error_8c.html  libswd__externs_8c.html  libswd__log_8c.html  libswd__urjtag_8c.html  structswd__ahbap__t-members.html  structswd__ahbap__t.html  structswd__cmd__t-members.html  structswd__cmd__t.html  structswd__context__config__t-members.html  structswd__context__config__t.html  structswd__ctx__t-members.html  structswd__ctx__t.html  structswd__driver__t-members.html  structswd__driver__t.html  structswd__swdp__t-members.html  structswd__swdp__t.html  (+2 more)
doxygen-doc/html/search/: all_61.html  all_62.html  all_6c.html  all_72.html  all_73.html  files_6c.html  functions_73.html  search.js  variables_61.html  variables_63.html  variables_74.html  variables_77.html
doxygen-doc/latex/: annotated.tex  doxygen.sty  files.tex  index.tex  libswd_8c.tex  libswd_8h.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structswd__ahbap__t.tex  structswd__cmd__t.tex  structswd__context__config__t.tex  structswd__ctx__t.tex  structswd__driver__t.tex  structswd__swdp__t.tex  structswd__transaction__t.tex
libswd/: COPYING  Doxyfile  Makefile  Makefile.am  Makefile.libswd  NEWS  README  autogen.sh  libswd.c  libswd.h  libswd_drv_dummy.c  libswd_drv_urjtag.c  libswd_test.c
libswd/doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x73.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  libswd_8c.html  libswd_8h.html  libswd_8h_source.html  structswd__ahbap__t-members.html  structswd__ahbap__t.html  structswd__cmd__t-members.html  structswd__cmd__t.html  structswd__context__config__t-members.html  structswd__context__config__t.html  structswd__ctx__t-members.html  structswd__ctx__t.html  structswd__driver__t-members.html  structswd__driver__t.html  structswd__swdp__t-members.html  structswd__swdp__t.html
libswd/doc/html/search/: all_61.html  all_64.html  all_6e.html  all_70.html  all_73.html  classes_73.html  enums_73.html  enumvalues_73.html  functions_73.html  typedefs_73.html  variables_61.html  variables_63.html  variables_70.html  variables_72.html
libswd/doc/man/man3/: libswd.c.3  libswd.h.3  swd_ahbap_t.3  swd_cmd_t.3  swd_context_config_t.3  swd_ctx_t.3  swd_driver_t.3  swd_swdp_t.3
libswd/doxygen-doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x73.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  libswd_8h.html  libswd_8h_source.html  libswd__bin_8c.html  libswd__bitgen_8c.html  libswd__bus_8c.html  libswd__cmd_8c.html  libswd__cmdq_8c.html  libswd__core_8c.html  libswd__dap_8c.html  libswd__drv_8c.html  libswd__error_8c.html  libswd__externs_8c.html  libswd__log_8c.html  libswd__urjtag_8c.html  structswd__ahbap__t.html  structswd__cmd__t-members.html  structswd__cmd__t.html  structswd__context__config__t.html  structswd__ctx__t.html  structswd__driver__t.html  structswd__swdp__t-members.html  structswd__swdp__t.html  structswd__transaction__t.html
libswd/doxygen-doc/html/search/: all_61.html  all_64.html  all_69.html  all_6c.html  all_6d.html  all_73.html  defines_73.html  enumvalues_73.html  files_6c.html  functions_73.html  variables_61.html  variables_64.html  variables_72.html  variables_77.html
libswd/src/: Doxyfile  Makefile  Makefile.am  libswd.c  libswd.h  libswd_bitgen.c  libswd_bus.c  libswd_cmd.c  libswd_dap.c  libswd_drv_dummy.c  libswd_drv_urjtag.c  libswd_externs.c  libswd_log.c  libswd_urjtag.c
libswd/src/examples/: libswd_test.c
src/: Makefile.am  Makefile.in  libswd.h  libswd_app.c  libswd_app.h  libswd_bin.c  libswd_bitgen.c  libswd_bus.c  libswd_cli.c  libswd_cmd.c  libswd_cmdq.c  libswd_core.c  libswd_dap.c  libswd_debug.c  libswd_drv.c  libswd_error.c  libswd_externs.c  libswd_log.c  libswd_memap.c
src/examples/: libswd_drv_openocd.c  libswd_drv_openocd.h  libswd_drv_urjtag.c  libswd_test.c  swd_libswd_drv_openocd.c  swd_libswd_drv_openocd.h
