lib_LTLIBRARIES = libswd.la
libswd_la_LDFLAGS = -version-info 0:2:0
include_HEADERS = libswd.h
EXTRA_DIST = examples/libswd_drv_urjtag.c

libswd_la_SOURCES = \
 libswd.h \
 libswd_bin.c \
 libswd_bitgen.c \
 libswd_bus.c \
 libswd_cmd.c \
 libswd_cmdq.c \
 libswd_core.c \
 libswd_dap.c \
 libswd_drv.c \
 libswd_error.c \
 libswd_log.c
